--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@heroicons/react": "^2.0.16",
     "next": "13.2.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.13",
     "eslint": "8.35.0",
