--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.16",
     "next": "13.2.1",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0"
   },
