--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "next": "13.2.1",
+    "next-auth": "^4.20.0",
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-datepicker": "^4.10.0",
