--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.14.2",
+    "@types/node": "^18.14.2",
     "@types/react": "18.0.28",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.11",
@@ -26,7 +26,9 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "postcss": "^8.4.21",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
