--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-datepicker": "^4.10.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.1.3"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
