--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "@prisma/client": "^4.11.0",
+    "moment": "^2.29.4",
     "next": "13.2.1",
     "next-auth": "^4.20.0",
     "react": "18.2.0",
